--- a/index.mdx
+++ b/index.mdx
@@ -1,22 +1,10 @@
 ---
 title: "Framer for Developers"
-description: "Welcome to the new home for your documentation"
+description: "Our developer features empowers you to extend Framer’s capabilities with standard React and Javascript. Get started with our docs and guides below."
 ---
 
-## Setting up
-
-Get your documentation site up and running in minutes.
-
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
 <Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
+  <Card title="Plugins" icon="pen-to-square" href="/development">
     Edit your docs locally and preview them in real time.
   </Card>
   <Card title="Customize your site" icon="palette" href="/essentials/settings">
