Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,41 +4,16 @@ description: "Our developer features empowers you to extend Framer’s capabilit
 ---
 
 <Columns cols={2}>
-  <Card title="Plugins" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
+  <Card title="Plugins" icon="shapes" href="/development">
+    #### Build small apps that can interact with the Framer Editor and CMS.
   </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
+  <Card title="Fetch" icon="link-simple" href="/essentials/settings">
+    Building API endpoints that designers can use on their Framer sites without code.
   </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Code Components" icon="diamonds-4" href="/essentials/navigation">
+    Custom React Components with visual controls to render anything on your site.
   </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
+  <Card title="Code Overrides" icon="rectangle-code" href="/api-reference/introduction">
+    Higher Order Components to modify Layer and Component properties.
   </Card>
 </Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
