Lots of changes

--- a/index.mdx
+++ b/index.mdx
@@ -1,19 +1,20 @@
 ---
 title: "Framer for Developers"
 description: "Our developer features empowers you to extend Framer’s capabilities with standard React and Javascript. Get started with our docs and guides below."
+sidebarTitle: "Overview"
 ---
 
 <Columns cols={2}>
-  <Card title="Plugins" icon="shapes" href="/development">
+  <Card title="Plugins" icon="shapes" href="/plugins/introduction">
     #### Build small apps that can interact with the Framer Editor and CMS.
   </Card>
-  <Card title="Fetch" icon="link-simple" href="/essentials/settings">
+  <Card title="Fetch" icon="link-simple" href="/fetch/introduction">
     Building API endpoints that designers can use on their Framer sites without code.
   </Card>
-  <Card title="Code Components" icon="diamonds-4" href="/essentials/navigation">
+  <Card title="Code Components" icon="diamonds-4" href="/components/introduction">
     Custom React Components with visual controls to render anything on your site.
   </Card>
-  <Card title="Code Overrides" icon="rectangle-code" href="/api-reference/introduction">
+  <Card title="Code Overrides" icon="rectangle-code" href="/overrides/introduction">
     Higher Order Components to modify Layer and Component properties.
   </Card>
 </Columns>
