Documentation edits made through Mintlify web editor

--- a/get-started/compare.mdx
+++ b/get-started/compare.mdx
@@ -4,3 +4,7 @@ sidebarTitle: "Compare"
 ---
 
 Framer offers a wide selection of features for Developers to use to extend the functionality of Framer. This page can help you decide how to choose between when to use Code Components, Overrides, Fetch, Plugins, or Custom Page Code.
+
+# Plugins
+
+Plugins are small apps that run within the Editor that can perform programmatically perform various tasks and utilize APIs to extend the core features of Framer. Plugins often utilize other features like Components to add functionality to the live website.
