Documentation edits made through Mintlify web editor

--- a/get-started/compare.mdx
+++ b/get-started/compare.mdx
@@ -8,3 +8,15 @@ Framer offers a wide selection of features for Developers to use to extend the f
 ## Plugins
 
 Plugins are small apps that run within the Editor that can perform programmatically perform various tasks and utilize APIs to extend the core features of Framer. Plugins often utilize other features like Components to add functionality to the live website.
+
+- Insert SVGs and images
+- Sync content into the CMS
+- Edit Layers on the Canvas
+
+## Fetch
+
+Fetch enables you to retrieve data from an API and use it on your Framer site without code. For Developers, this means you can set up endpoints for your team that work great with Fetch and allow your team to utilize the power of API calls from the client.
+
+- Display live info like weather
+- Adapt site based on location
+- Use your custom endpoints
