Documentation edits made through Mintlify web editor

--- a/get-started/compare.mdx
+++ b/get-started/compare.mdx
@@ -20,3 +20,19 @@ Fetch enables you to retrieve data from an API and use it on your Framer site wi
 - Display live info like weather
 - Adapt site based on location
 - Use your custom endpoints
+
+## Code Overrides
+
+Code Overrides are React Higher Order Components that can be applied to any Layer on your site. They are often used to override the properties of Layer or Components. Many previous uses for Overrides can now be achieved with Fetch or Components.
+
+- Adding data attributes
+- Using custom CSS rules
+- Tracking click events
+
+## Custom Site Code
+
+Custom Code in your site settings allows you to insert scripts and html at the start or end of the `<head>` and `<body>` tag of your site. Custom code and scripts can be added to specific pages or across every page on your published site.
+
+- Integrate tracking scripts
+- Setup structured data tags
+- Add custom script tags
