Documentation edits made through Mintlify web editor

--- a/plugins/introduction.mdx
+++ b/plugins/introduction.mdx
@@ -1,3 +1,16 @@
 ---
-title: "Introduction"
+title: "Welcome to Plugins"
+sidebarTitle: "Introduction"
 ---
+
+Plugins in Framer are small apps that can interact with the editor. They enable you to perform various actions such as inserting images, layers and code components or modifying anything on the Canvas. They can display any UI you’d like in a floating plugin window on the canvas, or perform an action without any UI. Let’s build.
+
+![](/images/ncS2lmoWR8ULAPi9SxUNuAye7o.avif)
+
+### Core Features
+
+- [Nodes](/plugins/guides/nodes) — Add or manipulate any layer on the Canvas.
+- [Components](/plugins/guides/components) — Insert and configure Components.
+- [CMS](/plugins/guides/cms) — Programmatically sync to CMS Collections.
+- [Sites](/plugins/guides/sites) — View information about the published site.
+- [Assets](/plugins/guides/assets) — Insert assets like SVGs and Images.
