Documentation edits made through Mintlify web editor

--- a/plugins/quick-start.mdx
+++ b/plugins/quick-start.mdx
@@ -1,3 +1,46 @@
 ---
 title: "Quick Start"
 ---
+
+This guide will help you get up and running with a Framer Plugin.
+
+## Installation
+
+To get started with Plugins, you can run `npm create framer-plugin@latest` in your terminal. This will walk you through a few steps and will create a new Plugin folder with a basic Plugin setup. If you prefer something other than npm, all major package managers are supported.
+
+If you’d looking to build a CMS Plugin specifically, we recommend starting with the CMS Starter Plugin. Learn how to get started with it in the [CMS guide](/plugins/guides/cms).
+
+```shellscript
+// npm (recommended)
+npm create framer-plugin@latest
+
+// pnpm 
+pnpm create framer-plugin
+
+// yarn
+yarn create framer-plugin
+```
+
+<Info>
+  Manual Installation
+
+  If you have an existing project you’d like to use the Plugin API from, you can install the `framer-plugin` package directly. However, we currently do not officially support this.
+</Info>
+
+<Tip>
+  Manual Installation
+
+  If you have an existing project you’d like to use the Plugin API from, you can install the `framer-plugin` package directly. However, we currently do not officially support this.
+</Tip>
+
+<Note>
+  Manual Installation
+
+  If you have an existing project you’d like to use the Plugin API from, you can install the `framer-plugin` package directly. However, we currently do not officially support this.
+</Note>
+
+## Running your Plugin
+
+After the initial setup, navigate into your Plugin folder using `cd your-plugin` and then run `npm run dev`. This command is what you’ll need to run at each time you want to develop your Plugin. With this dev command running, your Plugin can be picked up by Framer and will automatically update when you change any files from within your Plugin folder.
+
+/
