Documentation edits made through Mintlify web editor

--- a/plugins/quick-start.mdx
+++ b/plugins/quick-start.mdx
@@ -22,7 +22,7 @@ yarn create framer-plugin
 ```
 
 <Info>
-  Manual Installation
+  **Manual Installation**
 
   If you have an existing project you’d like to use the Plugin API from, you can install the `framer-plugin` package directly. However, we currently do not officially support this.
 </Info>
@@ -32,7 +32,7 @@ yarn create framer-plugin
 After the initial setup, navigate into your Plugin folder using `cd your-plugin` and then run `npm run dev`. This command is what you’ll need to run at each time you want to develop your Plugin. With this dev command running, your Plugin can be picked up by Framer and will automatically update when you change any files from within your Plugin folder.
 
 <Info>
-  Node Version too low?
+  **Node Version too low?**
 
   Framer uses the latest libraries that require a modern version of node. We recommend upgrading node or using a node version manager like `n` if you swap versions often.
 </Info>
