Documentation edits made through Mintlify web editor

--- a/plugins/quick-start.mdx
+++ b/plugins/quick-start.mdx
@@ -36,3 +36,21 @@ After the initial setup, navigate into your Plugin folder using `cd your-plugin`
 
   Framer uses the latest libraries that require a modern version of node. We recommend upgrading node or using a node version manager like `n` if you swap versions often.
 </Info>
+
+## Opening in Framer
+
+Now you have a Plugin running on your computer the next step is opening it within Framer. You'll need to enable the Developer Tools preference from within the Plugin section in the main menu.
+
+![nZIwNj8V8S4H3eLGthV6bRqS4NU.avif](/images/nZIwNj8V8S4H3eLGthV6bRqS4NU.avif)
+
+Once Developer Tools are enabled, open the Plugin menu from the toolbar, and click “Open Development Plugin”. This will run your Plugin.
+
+<Info>
+  **Ad-blockers**
+
+  Some Ad-blockers or browsers like Brave try to restrict access to localhost. If you have issues running your development Plugin, allow-listing framer.com may help.
+</Info>
+
+![RFpeXdxfsiWIosUvWOBp5WlL24.avif](/images/RFpeXdxfsiWIosUvWOBp5WlL24.avif)
+
+Now that your Plugin up and running, you can add some functionality to your app. Some ways to start would be to try manipulating [Nodes](/plugins/guides/nodes), inserting [Components](/plugins/guides/components), syncing to the [CMS](/plugins/guides/cms), or to start [styling your plugin](/plugins/guides/styles).
