Documentation edits made through Mintlify web editor

--- a/plugins/quick-start.mdx
+++ b/plugins/quick-start.mdx
@@ -41,7 +41,7 @@ After the initial setup, navigate into your Plugin folder using `cd your-plugin`
 
 Now you have a Plugin running on your computer the next step is opening it within Framer. You'll need to enable the Developer Tools preference from within the Plugin section in the main menu.
 
-![nZIwNj8V8S4H3eLGthV6bRqS4NU.avif](/images/nZIwNj8V8S4H3eLGthV6bRqS4NU.avif)
+![nZIwNj8V8S4H3eLGthV6bRqS4NU.avif](https://framerusercontent.com/images/nZIwNj8V8S4H3eLGthV6bRqS4NU.png?width=2050&height=1614)
 
 Once Developer Tools are enabled, open the Plugin menu from the toolbar, and click “Open Development Plugin”. This will run your Plugin.
 
@@ -51,6 +51,6 @@ Once Developer Tools are enabled, open the Plugin menu from the toolbar, and cli
   Some Ad-blockers or browsers like Brave try to restrict access to localhost. If you have issues running your development Plugin, allow-listing framer.com may help.
 </Info>
 
-![RFpeXdxfsiWIosUvWOBp5WlL24.avif](/images/RFpeXdxfsiWIosUvWOBp5WlL24.avif)
+![RFpeXdxfsiWIosUvWOBp5WlL24.avif](https://framerusercontent.com/images/RFpeXdxfsiWIosUvWOBp5WlL24.png?width=1838&height=1464)
 
 Now that your Plugin up and running, you can add some functionality to your app. Some ways to start would be to try manipulating [Nodes](/plugins/guides/nodes), inserting [Components](/plugins/guides/components), syncing to the [CMS](/plugins/guides/cms), or to start [styling your plugin](/plugins/guides/styles).
