Documentation edits made through Mintlify web editor

--- a/plugins/changelog.mdx
+++ b/plugins/changelog.mdx
@@ -1,3 +1,11 @@
 ---
 title: "Changelog"
 ---
+
+<Update label="v3.7.0">
+  This release combines three major updates to `framer-plugin`: the new Navigation API, extended Code File API, and support for Design Pages.
+</Update>
+
+<Update label="10/06/2025" description="">
+  
+</Update>
