Documentation edits made through Mintlify web editor

--- a/plugins/changelog.mdx
+++ b/plugins/changelog.mdx
@@ -4,6 +4,10 @@ title: "Changelog"
 
 <Update label="v3.7.0">
   This release combines three major updates to `framer-plugin`: the new Navigation API, extended Code File API, and support for Design Pages.
+
+  ## Navigation API
+
+  `framer.navigateTo(nodeId, opts?)` — Programmatically navigate to canvas nodes, collection items, or code files. Supports optional selection, zoom constraints, and field-level scrolling for collection items. Also available in class instances such as `node.navigateTo()`, `collectionItem.navigateTo()`, and `codeFile.navigateTo()`.
 </Update>
 
 <Update label="10/06/2025" description="">
