Documentation edits made through Mintlify web editor

--- a/plugins/changelog.mdx
+++ b/plugins/changelog.mdx
@@ -2,7 +2,7 @@
 title: "Changelog"
 ---
 
-<Update label="v3.7.0">
+<Update label="v3.7.0" description=" Sep 24, 2025">
   This release combines three major updates to `framer-plugin`: the new Navigation API, extended Code File API, and support for Design Pages.
 
   ## Navigation API
