--- a/plugins/reference.mdx
+++ b/plugins/reference.mdx
@@ -58,23 +58,144 @@ A set of functions for opening and closing the Plugin itself, along with options
 
 ## Permissions
 
+Plugins can do only what the user can. These APIs let you find out if the methods you need are available to the user, and potentially disable certain functions of your Plugin if not. Learn more with the [Permission guide](/plugins/guides/permissions).
+
+<ParamField path="isAllowedTo()">
+  Find out if user's permissions allow them to execute methods.
+</ParamField>
+
 ## Modes
+
+A property with the current mode. Modes are used to understand the context in which the Plugin is being run, and adjust logic as needed. Learn more in the [mode guide](/plugins/guides/modes).
+
+`mode`
 
 ## Project
 
+Information about the current Framer Project. Returns the display name of the Project as well as a hashed Project ID. This ID cannot be used to access the Project.
+
+`getProjectInfo()`
+
 ## Selection
+
+Functions for reading, setting, or listening to the current selection on the Canvas. The returned list can range from zero items to a very large list of items.
+
+`getSelection()`
+
+`setSelection(nodeIds)`
+
+`subscribeToSelection(callback)`
+
+```typescript
+const [selection, setSelection] = useState<CanvasNode[]>([])
+
+useEffect(() => {
+    return framer.subscribeToSelection(setSelection)
+}, [])
+
+console.log(`Selected ${selection.length} item(s)`) 
+```
 
 ## Assets
 
+A selection of functions for working with Images, Files, and SVGs. The high-level `add` and `set` functions are designed to work in most cases and automatically handle uploading for you. Learn more in the [working with Assets guide](/plugins/guides/assets).
+
+`addImage(imageAsset)`
+
+`setImage(imageAsset)`
+
+`uploadImage(file)`
+
+`uploadFile(file)`
+
+`uploadFiles(files[])`
+
+`addSvg(svgString)`
+
 ## Components
+
+Functions for utilising Components in your Plugin. Learn more in the [Component guide](/plugins/guides/components).
+
+`addComponentInstance({ url, attributes })`
+
+`addDetachedComponentLayers({ url, layout, attributes })`
 
 ## Text
 
+A selection of functions for working with text layers and their content.
+
+`getText()`
+
+`setText(text)`
+
+`addText(text)`
+
+`subscribeToText(callback)`
+
 ## Custom Code
+
+With Custom Code your plugin can install code snippets in a user's Website via `<script>` tags. Custom Code added by a Plugin appears in a separate section of a Project’s site settings specifically for Plugins. This can be used to load external scripts on a site. Custom code should be valid HTML.
+
+`setCustomCode(options)`
+
+`getCustomCode()`
+
+`subscribeToCustomCode(callback)`
+
+When setting Custom Code, you must provide the html string, as well as a `location`.
+
+```javascript
+framer.setCustomCode({ 
+  html: '<script src="https://example.com/script.js"></script>',
+  location: "bodyEnd" 
+})
+```
+
+The `location` property has the following values:
+
+- `headStart` - Injects the code snippet at the start of the HTML `<head>` tag
+- `headEnd` - Injects the code snippet at the end of the HTML `<head>` tag
+- `bodyStart` - Injects the code snippet at the start of the `<body>` tag
+- `bodyEnd` - injects the code snippet at the end of the `<body>` tag
+
+Setting the `html` value back to `null` clears the installed code snippet.
+
+```javascript
+framer.setCustomCode({ 
+  html: null,
+  location: "bodyEnd" 
+})
+```
 
 ## Storing Data
 
+Functions for storing data that your Plugin case use across users and sessions. Learn about the different ways to store data in our [Data guide](/plugins/guides/data).
+
+`getPluginData(key)`
+
+`setPluginData(key, value)`
+
+`getPluginDataKeys()`
+
 ## Styles
+
+A set of functions for creating, reading and manipulating the Color and Text Styles in a Project. Learn more in our [Styles guide](/plugins/guides/styles).
+
+`createColorStyle(attributes)`
+
+`getColorStyle(id)`
+
+`getColorStyles()`
+
+`subscribeToColorStyles(callback)`
+
+`createTextStyle(attributes)`
+
+`getTextStyle(id)`
+
+`getTextStyles()`
+
+`subscribeToTextStyles(callback)`
 
 ## Fonts
 
