--- a/plugins/reference.mdx
+++ b/plugins/reference.mdx
@@ -65,7 +65,11 @@ Plugins can do only what the user can. These APIs let you find out if the method
 </ParamField>
 
 <ParamField path="subscribeToIsAllowedTo()">
-Subscribe to changes in whether the user is allowed to execute methods.
+  Subscribe to changes in whether the user is allowed to execute methods.
+</ParamField>
+
+<ParamField path="useIsAllowedTo()">
+  Find out if user's permissions allow them to execute methods, in hook form.
 </ParamField>
 
 ## Modes
