Documentation edits made through Mintlify web editor

--- a/plugins/reference.mdx
+++ b/plugins/reference.mdx
@@ -60,15 +60,15 @@ A set of functions for opening and closing the Plugin itself, along with options
 
 Plugins can do only what the user can. These APIs let you find out if the methods you need are available to the user, and potentially disable certain functions of your Plugin if not. Learn more with the [Permission guide](/plugins/guides/permissions).
 
-<ParamField path="isAllowedTo()">
+<ParamField header="isAllowedTo()">
   Find out if user's permissions allow them to execute methods.
 </ParamField>
 
-<ParamField path="subscribeToIsAllowedTo()">
+<ParamField header="subscribeToIsAllowedTo()">
   Subscribe to changes in whether the user is allowed to execute methods.
 </ParamField>
 
-<ParamField path="useIsAllowedTo()">
+<ParamField header="useIsAllowedTo()">
   Find out if user's permissions allow them to execute methods, in hook form.
 </ParamField>
 
