--- a/plugins/reference/use-is-allowed-to.mdx
+++ b/plugins/reference/use-is-allowed-to.mdx
@@ -1,3 +1,30 @@
 ---
 title: "useIsAllowedTo"
 ---
+
+Find out if user's permissions allow them to execute methods, in hook form.
+
+```javascript
+const isAllowed = useIsAllowedTo("addText", "addImage")
+<button disabled={!isAllowed}>+</button>
+```
+
+### Signature
+
+```javascript
+useIsAllowedTo: (
+  ...methods: [ProtectedMethod, ...ProtectedMethod[]]
+) => boolean
+```
+
+### Parameters
+
+- `methods` – The methods to check, at least one.
+
+### Returns
+
+- `boolean` – `true` if all of `methods` can be executed, `false` otherwise.
+
+### Notes
+
+Learn more with the [Permission guide](/plugins/guides/permissions).
